--- a/templates/student/studentclick.html
+++ b/templates/student/studentclick.html
@@ -26,9 +26,9 @@
   <br><br>
   <div class="jumbotron" style="margin-bottom:0px;">
     <h1 class="display-4">Hello, Student</h1>
-    <p class="lead">Welcome to Online Quiz</p>
+    
     <hr class="my-4">
-    <p>You can access various features after Login.</p>
+    <p>Login to access </p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="studentsignup" role="button">Create Your Account</a>
       <a class="btn btn-primary btn-lg" href="studentlogin" role="button">Login</a>
