--- a/templates/teacher/teacherclick.html
+++ b/templates/teacher/teacherclick.html
@@ -26,9 +26,9 @@
   <br><br>
   <div class="jumbotron" style="margin-bottom:0px;">
     <h1 class="display-4">Hello, Teacher</h1>
-    <p class="lead">Welcome to Online Quiz</p>
+    
     <hr class="my-4">
-    <p>You can access various features after Login.</p>
+    <p>Login to access various features.</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="teachersignup" role="button">Create Your Account</a>
       <a class="btn btn-primary btn-lg" href="teacherlogin" role="button">Login</a>
